syntax = "proto3";

import "Profile.proto";
import "Common.proto";

package org_glowroot_wire_api_model;

option java_package = "org.glowroot.wire.api.model";

// deprecated in 0.9.5
message OldAggregatesByType {
  string transaction_type = 1;
  Aggregate overall_aggregate = 2;
  repeated OldTransactionAggregate transaction_aggregate = 3;
}

// deprecated in 0.9.5
message OldTransactionAggregate {
  string transaction_name = 2;
  Aggregate aggregate = 3;
}

// aggregate uses double instead of int64 to avoid (unlikely) 292 year nanosecond rollover
message Aggregate {

  double total_duration_nanos = 1;
  int64 transaction_count = 2;
  int64 error_count = 3;
  bool async_transactions = 4; // true if there was at least one async transaction in aggregate
  repeated Timer main_thread_root_timer = 5;
  repeated Timer aux_thread_root_timer = 6;
  repeated Timer async_timer = 7; // async timers have no child timers
  ThreadStats main_thread_stats = 8;
  ThreadStats aux_thread_stats = 9;
  Histogram duration_nanos_histogram = 10; // histogram values are in nanoseconds with microsecond
                                           // precision
  repeated QueriesByType queries_by_type = 11;
  repeated ServiceCallsByType service_calls_by_type = 12;
  Profile main_thread_profile = 13;
  Profile aux_thread_profile = 14;

  message Histogram {
    // for smaller numbers of transactions, the individual raw values are stored directly
    // these values are ordered for fast percentile calculation on retrieval
    repeated int64 ordered_raw_value = 1;
    // for larger numbers of transactions, the histogram is tracked and encoded using HdrHistogram
    bytes encoded_bytes = 2;
  }

  message Timer {
    // name is null for synthetic root
    string name = 1;
    bool extended = 2;
    double total_nanos = 3;
    int64 count = 4;
    repeated Timer child_timer = 5;
  }

  message ThreadStats {
    OptionalDouble total_cpu_nanos = 1;
    OptionalDouble total_blocked_nanos = 2;
    OptionalDouble total_waited_nanos = 3;
    OptionalDouble total_allocated_bytes = 4;
  }

  message QueriesByType {
    // e.g. "SQL", "CQL"
    string type = 1;
    repeated Query query = 2;
  }

  message Query {
    string full_text = 1; // deprecated in 0.9.1
    int32 shared_query_text_index = 5; // introduced in 0.9.1, replacing full_text attribute
    double total_duration_nanos = 2;
    int64 execution_count = 3;
    OptionalInt64 total_rows = 4;
  }

  message ServiceCallsByType {
    // e.g. "HTTP"
    string type = 1;
    repeated ServiceCall service_call = 2;
  }

  message ServiceCall {
    string text = 1;
    double total_duration_nanos = 2;
    int64 execution_count = 3;
  }

  message SharedQueryText {
    string full_text = 1; // sent when query text <= 120 characters
    string truncated_text = 2; // sent when query text > 120 characters
    string full_text_sha1 = 3; // sent when query text > 120 characters
  }
}
